--- a/articles/app-service/index.yml
+++ b/articles/app-service/index.yml
@@ -7,12 +7,12 @@ metadata:
   ms.topic: landing-page
   ms.service: app-service
   ms.date: 08/06/2020
-  ms.openlocfilehash: d385cfd0d6b83fb1c6f41751849c4bd79c09f7fe
-  ms.sourcegitcommit: d63f15674f74d908f4017176f8eddf0283f3fac8
+  ms.openlocfilehash: 949dcf3700388036252c45fd0eaef2e96e9083be
+  ms.sourcegitcommit: 14cd60fe58964acd4bccb6053f36e60d5848edc0
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 04/07/2021
-  ms.locfileid: "106579862"
+  ms.lasthandoff: 05/12/2021
+  ms.locfileid: "109795349"
 landingContent:
 - title: Informationen zu App Service
   linkLists:
@@ -190,3 +190,17 @@ landingContent:
       url: /rest/api/appservice/
     - text: Ressourcen-Manager
       url: /azure/templates/microsoft.web/allversions
+- title: App Service in Azure Arc (Vorschau)
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: App Service, Functions und Logic Apps in Azure Arc (Vorschau)
+      url: overview-arc-integration.md
+  - linkListType: tutorial
+    links:
+    - text: Einrichten eines Kubernetes-Clusters mit Azure Arc-Unterstützung zum Ausführen von App Service, Funktionen und Logic Apps (Vorschau)
+      url: quickstart-arc.md
+  - linkListType: quickstart
+    links:
+    - text: Erstellen einer App Service-App in Azure Arc (Vorschau)
+      url: https://azure.microsoft.com/updates/?product=app-service
