--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -213,7 +213,7 @@
               href: storage-files-migration-storsimple-8000.md
             - name: Migrationshandbuch zu StorSimple 1200
               href: storage-files-migration-storsimple-1200.md
-    - name: Verbessern der Leistung
+    - name: Leistung
       items:
         - name: Aktivieren von SMB Multichannel
           href: storage-files-enable-smb-multichannel.md
