--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -172,7 +172,11 @@
             - name: Konfigurieren von Multi-Factor Authentication (MFA)
               href: openvpn-azure-ad-mfa.md
             - name: Konfigurieren eines VPN-Clients
-              href: openvpn-azure-ad-client.md
+              items:
+                - name: Windows
+                  href: openvpn-azure-ad-client.md
+                - name: 'macOS: Vorschau'
+                  href: openvpn-azure-ad-client-mac.md
             - name: Arbeiten mit VPN-Clientprofildateien
               href: about-vpn-profile-download.md
             - name: 'Intune: Bereitstellen des VPN-Clientprofils'
